--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "floc-off": "^1.0.2",
     "live-server": "^1.2.2",
     "swiper": "^8.4.2"
   }
